2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install GNOME_Panel.server again.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* doc/libpanel-applet-changes.txt, 
	  doc/reference/.cvsignore: remove

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: remove building of libpanel-applet-2.0.

	* GNOME_Panel_TestApplet.server.in, libpanelapplet-2.0.pc.in:
	  panel-applet-private.h, panel-applet-shell.c,
	  panel-applet-shell.h, panel-applet.c,
	  panel-applet.h, test-bonobo-applet.c: move to
	../libpanel-applet, preservin history.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* launcher.c: include quick-desktop-reader.h.
	(create_launcher): remove duplicate, redundant call to
	gnome_program_locate_file.

Tue Nov 27 00:42:05 2001  George Lebl <jirka@5z.com>

	* Makefile.am, menu-rh.[ch], distribution.[ch]: whack the redhat
	  menu stuff.  Note this was the OLD redhat menu stuff which was
	  just plain crack.  Though this reduces the overall ugliness
	  quotient of the menu*.c files by quite a bit, but I'll live.

	* panel-utils.[ch], quick-desktop-reader.c, menu.c,
	  menu-properties.c, launcher.c: Make pixmap finding work better
	  also find kde icons from kde2 properly (well ... properly ...
	  somewhat properly).  Load last mapped first for fakes.  Fix
	  the gtk_menu_reposition hack to be shorter but just as evil.

2001-11-27  Glynn Foster  <glynn.foster@sun.com>

	* menu.c, panel.c: Revert Mark's reverts...Yay, commit war!

	s/g_signal_connect_object/g_signal_connect/swapped
	s/g_signal_disconnect_by_func/g_signal_handlers_disconnect_by_func

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* menu-fentry.c: (fr_fill_dir), (fr_read_dir): #ifdef out
	  debugging messages.

	* quick-desktop-reader.c: (quick_desktop_item_load_uri): ditto.

	* menu.c: (fake_mapped_fake), (show_item_menu),
	(create_menu_at_fr): revert g_signal_connect_object changes
	back to gtk_signal_connect_object. Giving out warnings and not
	sure how to fix it.