@@ -29,7 +29,7 @@ gstc.c
 gstc.h
 gwmthumbnail.h
 xgen-gmh
-panel-2
+gnome-panel-2
 GNOME_Panel.server
 GNOME_Panel_TestApplet.server
 panel-typebuiltins.c
