@@ -1,5 +1,9 @@
 2001-11-27  Mark McLoughlin  <mark@skynet.ie>
 
+	* Makefile.am: rename binary to gnome-panel-2.
+
+2001-11-27  Mark McLoughlin  <mark@skynet.ie>
+
 	* Makefile.am: install GNOME_Panel.server again.
 
 2001-11-27  Mark McLoughlin  <mark@skynet.ie>
